# wikirandom

./: LICENSE  pyproject.toml
src/wikirandom/: __init__.py  console.py
