[tool.poetry]
name = "wikirandom"
version = "0.1.0"
description = "Accesses the Wikipedia API and generates randoms facts"
license="MIT"
authors = ["Narendra Nag <narendranag@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/narendranag/wikirandom"
repository = "https://github.com/narendranag/wikirandom"
keywords = ["wikipedia", "hypermodern"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
